Theoretical part worked on

--- a/numpy.random assignment.ipynb
+++ b/numpy.random assignment.ipynb
@@ -8,11 +8,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The following notebook will aim to discuss the following problem statements in relation to the numpy random package\n",
+    "The following will aim to explain the use of the package, including detailed explanations of at least ﬁve of the distributions provided for in the package. There are four distinct tasks to be carried out in your Jupyter notebook. \n",
+    "1. Explain the overall purpose of the package. \n",
+    "2. Explain the use of the “Simple random data” and “Permutations” functions. \n",
+    "3. Explain the use and purpose of at least ﬁve “Distributions” functions. \n",
+    "4. Explain the use of seeds in generating pseudorandom numbers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### The usage of numpy.random\n",
+    "Numpy.random is a separate package provided in Anaconda for python. It generates pseudo-random samples or arrays to be used in python if the user does not have a specific dataset to work with. Pseudo-random samples because if the algorythm is known it is possible to predict the next number in the sample [2]. There are many different functions within numpy.random.\n",
+    "1. To create simple random data\n",
+    "2. For permutations\n",
+    "3. To work with distributions of data\n",
+    "4. and the random generator functions. [1].\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### The overall purpose of the package\n",
+    "The purpose of the package is to supplement \"the build in Python radom with functions for efficiently generating whole arrays of sample values from many kinds of probability distributions\" (Wes McKinney, 118) [2]."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### The use of simple random data and permutations"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -452,11 +489,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "###### Refenrences:\n",
+    "[1] https://docs.scipy.org/doc/numpy-1.15.1/reference/routines.random.html\n",
+    "[2] McKinney, Wes. Python for Data Analysis. Data Wrangling with Pandas, Numpy, and iPython, O'Reilly, 2017."
+   ]
   }
  ],
  "metadata": {
